<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        />

    <ListPreference
        android:key="@string/pref_metrics_key"
        android:title="@string/pref_metrics_label"
        android:summary="@string/pref_metrics_summary"
        android:defaultValue="@string/pref_metrics_default"
        android:entries="@array/pref_metrics_array"
        android:entryValues="@array/pref_metrics_array_values"
        />

</PreferenceScreen>